--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --primary: rgba(217, 4, 41);
-} */
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
+}
+
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
+.light {
+  --background: #ededed;
+  --foreground: #0a0a0a;
 }
